index.htmlga ozgratiasdflkasd

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Asosiy qism boshlandi -->
     <div class="container">
         <div class="left-sidebar">
-            Balo battar
+            Balo battarr
         </div>
         <div class="content">
             <div class="tovar">
